--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,55 @@
-numpy
-matplotlib
-scikit-learn
-black
-pre-commit
+black == 24.10.0
+cfgv == 3.4.0
+click == 8.1.7
+contourpy == 1.3.0
+cycler == 0.12.1
+distlib == 0.3.9
+filelock == 3.16.1
+fonttools == 4.54.1
+fsspec == 2024.2.0
+identify == 2.6.2
+Jinja2 == 3.1.3
+joblib == 1.4.2
+kiwisolver == 1.4.7
+MarkupSafe == 2.1.5
+matplotlib == 3.9.2
+mpmath == 1.3.0
+mypy-extensions == 1.0.0
+networkx == 3.2.1
+nodeenv == 1.9.1
+numpy == 2.1.3
+nvidia-cublas-cu12 == 12.4.5.8
+nvidia-cuda-cupti-cu12 == 12.4.127
+nvidia-cuda-nvrtc-cu12 == 12.4.127
+nvidia-cuda-runtime-cu12 == 12.4.127
+nvidia-cudnn-cu12 == 9.1.0.70
+nvidia-cufft-cu12 == 11.2.1.3
+nvidia-curand-cu12 == 10.3.5.147
+nvidia-cusolver-cu12 == 11.6.1.9
+nvidia-cusparse-cu12 == 12.3.1.170
+nvidia-nccl-cu12 == 2.21.5
+nvidia-nvjitlink-cu12 == 12.4.127
+nvidia-nvtx-cu12 == 12.4.127
+packaging == 24.2
+pathspec == 0.12.1
+pillow == 11.0.0
+pip == 22.0.2
+platformdirs == 4.3.6
+pre_commit == 4.0.1
+pyparsing == 3.2.0
+python-dateutil == 2.9.0.post0
+PyYAML == 6.0.2
+scikit-learn == 1.5.2
+scipy == 1.14.1
+setuptools == 59.6.0
+six == 1.16.0
+sympy == 1.13.1
+threadpoolctl == 3.5.0
+tomli == 2.1.0
+torch == 2.5.1+cu124
+torchaudio == 2.5.1+cu124
+torchvision == 0.20.1+cu124
+triton == 3.1.0
+typing_extensions == 4.12.2
+virtualenv == 20.27.1
+wandb == 0.18.7
